# files

./: colors.scheme.xml  editor.codeinsight.xml  other.xml
colors/: Atom copy.icls  Atom.icls  Monokai Sublime Text 3 copy.icls  Monokai Sublime Text 3.icls  One Dark copy.icls  One Dark.icls  Peacock copy.icls  Peacock.icls  Tomorrow Night copy.icls  Tomorrow Night.icls  Wombat copy.icls  Wombat.icls  _@user_Darcula copy.icls  _@user_Darcula copy1.icls
src/FILE/: CMakeLists.txt  curses.c  dbm.c  env.c  limit.c  lock.c  lowlevel.c  main.c  memory.c  opt.c  pipe.c  program.c  signal.c  slog.c  std.c  terminal.c  termios.c  thread.c  thread_mutex.c  thread_sem.c  tim.c
